# django-mimsms

./: .gitignore  CHANGELOG.md  GEMINI.md  PLAN.md  README.md  pyproject.toml  verify_mimsms.py
.github/workflows/: ci.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
specs/001-mimsms-django-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mimsms-django-integration/checklists/: requirements.md
specs/001-mimsms-django-integration/contracts/: client.md
specs/002-fix-github-release-failure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-github-release-failure/checklists/: requirements.md
src/django_mimsms/: __init__.py  client.py  config.py  django.py  exceptions.py  models.py  transport.py
tests/: settings.py  test_client.py  test_config.py  test_django.py  test_transport.py
