[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-mimsms"
version = "0.1.0"
authors = [
  { name="Mimsms Integration Team" },
]
description = "Production-ready Django & Python package for MiMSMS.com bulk SMS API. Features async support, type safety, and seamless Bangladesh SMS gateway integration."
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "django-mimsms",
    "mimsms sms api",
    "django sms integration",
    "bulk sms bangladesh",
    "mimsms.com python",
    "dynamic sms api",
    "sms gateway django",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
]
dependencies = [
    "django>=5.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "rich>=15.0.0",
]

[project.urls]
"Homepage" = "https://github.com/sharf-shawon/django-mimsms"
"Bug Tracker" = "https://github.com/sharf-shawon/django-mimsms/issues"
"Documentation" = "https://github.com/sharf-shawon/django-mimsms#readme"
"Repository" = "https://github.com/sharf-shawon/django-mimsms"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "build",
    "rich>=13.0.0",
    "django-mimsms[test]",
    "python-semantic-release>=9.0.0",
]


[tool.semantic_release]
vcs_provider = "github"
version_variable = [
    "src/django_mimsms/version.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python -m pip install build && python -m build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "DTZ", "SIM", "TID"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src/django_mimsms --cov-report=term-missing --cov-fail-under=100"
testpaths = [
    "tests",
]
pythonpath = [".", "src"]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.setuptools.packages.find]
where = ["src"]
